appId: com.oreku.reactnativeshowcase
---
- tapOn: Advance progress
- waitForAnimationToEnd
- tapOn: Advance progress
- waitForAnimationToEnd
- tapOn: Advance progress
- waitForAnimationToEnd
